--- a/index.html
+++ b/index.html
@@ -16,24 +16,41 @@
 
 
 <body>
-	<div>
-		<div class="panel panel-default col-sm-4">
-			<div class="panel-body">
-				<h1>Hello!</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus posuere neque nec turpis aliquet pellentesque. Suspendisse pretium rhoncus augue sed volutpat. Nullam ut nunc nec lacus posuere consectetur vel sed lacus. Curabitur congue congue magna a facilisis. Suspendisse vulputate enim id elit hendrerit, nec efficitur neque lobortis. Integer elementum magna id erat lacinia tincidunt. Morbi consequat, quam vel imperdiet ullamcorper, enim erat fringilla ipsum, ac lacinia urna eros sit amet neque. Ut feugiat maximus mi sed euismod. Fusce sit amet eros purus. Sed eleifend vestibulum euismod. Nunc venenatis nibh et purus suscipit placerat. Duis volutpat quam justo, non dapibus magna ultricies in. Donec congue rutrum neque non lobortis.</p>
+	<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Peyton Duncan</a>
+    </div>
 
-				<p>Donec a felis nec mauris malesuada elementum ac quis odio. Nulla tortor diam, ultricies et semper et, porta eget eros. Aenean hendrerit nibh id quam scelerisque, vel porta justo aliquet. Etiam orci magna, congue nec metus sed, sagittis finibus est. Proin posuere turpis ut feugiat semper. Integer fringilla ante at vulputate facilisis. Aliquam a risus neque. Proin blandit dolor velit, mollis tempor lectus convallis vel. Mauris convallis aliquet cursus.</p>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+        <li><a href="github.html">GitHub</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
 
-				<p>Morbi in hendrerit arcu, vel accumsan tortor. Vivamus posuere lacus non ultrices dapibus. Nullam fermentum ligula metus, vitae elementum eros sagittis eleifend. Aenean eu erat lorem. In at est tellus. Maecenas feugiat lectus ipsum, non ultricies neque interdum vel. Quisque non sagittis nisl, eget ultricies elit. Nam auctor laoreet eros sed pulvinar. Vivamus nec ante interdum, suscipit mauris eu, tincidunt arcu. Curabitur vestibulum purus non nunc congue egestas. Vestibulum a leo eu dui ornare dignissim. Vivamus accumsan lacus ut nisl condimentum viverra. Ut porta molestie vestibulum. Mauris dapibus, sapien ac sollicitudin porttitor, elit quam tempus quam, ac porttitor turpis felis non lectus. Nam rutrum ligula ac consectetur sagittis.</p>
 
-				<p>Donec elementum sit amet velit at maximus. Morbi pretium sapien ac augue rhoncus, at vestibulum lectus lobortis. Sed gravida feugiat lorem in molestie. In eleifend tortor sed erat cursus, vitae auctor tortor feugiat. Integer quis risus ut elit sagittis tristique ut vitae turpis. Vestibulum tellus mauris, pretium a urna consequat, convallis varius elit. Nullam iaculis tempus augue quis dapibus.</p>
-
-				<p>Donec sit amet dolor sed risus tincidunt efficitur. Integer molestie vehicula mi, et feugiat lorem posuere in. Integer lorem eros, pretium iaculis tortor in, tincidunt bibendum sapien. In sollicitudin tempor mauris. Cras pellentesque, nisi eget fermentum ultrices, leo nibh gravida mi, eu hendrerit neque enim at sem. Curabitur mollis vulputate ipsum, eget placerat diam suscipit sit amet. Cras tortor purus, sagittis lobortis mattis nec, gravida non sem. Mauris faucibus sapien id maximus iaculis. Proin sit amet laoreet ante. Curabitur cursus dui nec scelerisque eleifend. Proin feugiat dui arcu, eget luctus lectus maximus vel. Quisque aliquet nisl massa, ut facilisis lectus tempor a. Nullam porttitor purus libero, a tincidunt mauris condimentum ide.</p>
-				
-			</div>
-		</div>
-		
-	</div>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
