--- a/github.html
+++ b/github.html
@@ -9,8 +9,8 @@
   	<!-- Optional theme -->
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
   </head>
-  <body background="styles/stars.jpg">
-    <nav class="navbar navbar-inverse">
+  <body>
+    <nav class="navbar navbar">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
