--- a/favoritevideos.html
+++ b/favoritevideos.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Github Repositories</title>
+    <title>Favorite Videos</title>
 
     	<link rel="stylesheet" href="styles/main2.css">
     <!-- Latest compiled and minified CSS -->
@@ -27,8 +27,8 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
-          <li class="active"><a href="../github.html">GitHub</a></li>
-          <li><a href="randomvideo.html">Random Video</a></li>
+          <li><a href="https://www.github.com/Helithumper">GitHub</a></li>
+          <li class = "active"><a href="favoritevideos.html">Favorite Videos</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
@@ -46,6 +46,13 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
+  <container>
+    <div class="container">
+			<div class="row">
+        <iframe class="xs-offset4 xs-span6" width="1280" height="720" src="https://www.youtube.com/embed/videoseries?list=FLALpDL0ef1KxVrQJRm91IXg&index=10" frameborder="0" allowfullscreen></iframe>
+			</div>
+</row>
+</container>
   <script src="https://code.jquery.com/jquery.js"></script>
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
