--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-					<li><a href="github.html">GitHub</a></li>
+					<!-- <li><a href="github.html">GitHub</a></li> -->
+					<li><a href="https://www.github.com/Helithumper">GitHub</a></li>
+          <li><a href="favoritevideos.html">Favorite Videos</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
