--- a/favoritevideos.html
+++ b/favoritevideos.html
@@ -1,61 +1,54 @@
 <html>
-  <head>
-    <title>Favorite Videos</title>
-
-    	<link rel="stylesheet" href="styles/main2.css">
-    <!-- Latest compiled and minified CSS -->
-  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-
-  	<!-- Optional theme -->
-  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-  </head>
-  <body>
-    <nav class="navbar navbar">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Peyton Duncan</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
-          <li><a href="https://www.github.com/Helithumper">GitHub</a></li>
-          <li class = "active"><a href="favoritevideos.html">Favorite Videos</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>
+<head>
+  <title>Favorite Videos</title>
+  <link rel="shortcut icon" type="image/x-icon" href="titleicon.ico" />
 
 
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-  <container>
-    <div class="container">
-			<div class="row">
-        <iframe class="xs-offset4 xs-span6" width="1280" height="720" src="https://www.youtube.com/embed/videoseries?list=FLALpDL0ef1KxVrQJRm91IXg&index=10" frameborder="0" allowfullscreen></iframe>
+  <link rel="stylesheet" href="styles/main2.css">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+</head>
+<body>
+  <nav class="navbar navbar">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
 			</div>
-</row>
-</container>
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li><a href="index.html"><strong>Home</strong><span class="sr-only">(current)</span></a></li>
+					<!-- <li><a href="github.html">GitHub</a></li> -->
+					<li><a href="https://www.github.com/Helithumper" target="_blank">GitHub</a></li>
+          <li class="active"><a href="favoritevideos.html">Favorite Videos</a></li>
+          <li><a href="mailto:peyton.duncan@thewalkerschool.org?Subject=I%20Saw%20Your%20Website!" target="_top">Contact Me!</a></li>
+
+
+
+				</div><!-- /.navbar-collapse -->
+			</div><!-- /.container-fluid -->
+		</nav>
+    <container>
+      <div class="container">
+        <div class="row">
+              <iframe class="xs-offset2 xs-span6" width="1280" height="720" src="https://www.youtube.com/embed/videoseries?list=FLALpDL0ef1KxVrQJRm91IXg" frameborder="0" allowfullscreen></iframe>
+
+        </div>
+      </row>
+    </container>
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
   </body>
-</html>
+  </html>
