--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Peyton Duncan</title>
-
+	<link rel="shortcut icon" type="image/x-icon" href="titleicon.ico" />
 	<link rel="stylesheet" href="styles/main.css">
 
 
@@ -26,28 +26,16 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Peyton Duncan</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+					<li class="active"><a href="#"><strong>Home</strong><span class="sr-only">(current)</span></a></li>
 					<!-- <li><a href="github.html">GitHub</a></li> -->
-					<li><a href="https://www.github.com/Helithumper">GitHub</a></li>
+					<li><a href="https://www.github.com/Helithumper" target="_blank">GitHub</a></li>
           <li><a href="favoritevideos.html">Favorite Videos</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-						<ul class="dropdown-menu" role="menu">
-							<li><a href="#">Action</a></li>
-							<li><a href="#">Another action</a></li>
-							<li><a href="#">Something else here</a></li>
-							<li class="divider"></li>
-							<li><a href="#">Separated link</a></li>
-							<li class="divider"></li>
-							<li><a href="#">One more separated link</a></li>
-						</ul>
-					</li>
+					<li><a href="mailto:peyton.duncan@thewalkerschool.org?Subject=I%20Saw%20Your%20Website!" target="_top">Contact Me!</a></li>
 
 
 				</div><!-- /.navbar-collapse -->
