Added 4096 page and Lorum Ipsum Poem

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 					<!-- <li><a href="github.html">GitHub</a></li> -->
 					<li><a href="https://www.github.com/Helithumper" target="_blank">GitHub</a></li>
           <li><a href="favoritevideos.html">Favorite Videos</a></li>
+					<li><a href="4096.html">4096</a></li>
 					<li><a href="mailto:peyton.duncan@thewalkerschool.org?Subject=I%20Saw%20Your%20Website!" target="_top">Contact Me!</a></li>
 
 
@@ -55,10 +56,17 @@
 					<h3 class="panel-title">About Me!</h3>
 				</div>
 				<div class="panel-body">
-					<p>CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
-						CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT
-						CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT CONTENT	CONTENT
-					</p></div>
+					<p>
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean hendrerit tellus non arcu lobortis vulputate vel sed lacus. Sed non rutrum lectus, ac hendrerit purus. Duis non finibus lacus, vitae consectetur orci. Mauris tristique ornare sapien eu convallis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum malesuada velit enim, ac hendrerit lacus sollicitudin nec. Aliquam fringilla, elit eu tincidunt bibendum, tortor eros sagittis nisl, sed hendrerit sem odio quis neque. Ut sit amet commodo lectus, a rhoncus nisl.
+
+Ut sed maximus enim. Vestibulum consectetur scelerisque leo, finibus aliquet lectus efficitur vel. Suspendisse eu odio vel lorem iaculis faucibus nec at urna. Vestibulum non faucibus odio, feugiat pulvinar nunc. Nulla lacinia massa orci. Nulla ac placerat leo. Etiam et sapien et nulla aliquet accumsan. Nullam rhoncus vulputate consequat. Maecenas rhoncus semper erat, eget vulputate dui imperdiet eget. Aenean non mauris lacus. Cras eleifend lectus pharetra venenatis condimentum. Praesent pharetra cursus ex nec mollis. Nullam ac pretium nunc.
+
+Duis vitae ultricies sapien, id gravida erat. Donec fringilla arcu et molestie vehicula. Phasellus efficitur tincidunt quam vitae luctus. Morbi lectus dolor, faucibus a leo nec, laoreet venenatis arcu. Phasellus placerat dolor ac lacus fringilla, id porta libero sollicitudin. Duis iaculis mauris vel finibus efficitur. Vestibulum sed fermentum sem. Etiam laoreet mollis ligula quis facilisis. Donec tincidunt erat in sapien blandit feugiat. Quisque porta vestibulum ipsum, ut facilisis nisi sagittis ut. Donec vitae tortor suscipit, sagittis tellus sit amet, vehicula nisi. Morbi non lorem commodo, faucibus nibh eget, dictum massa. In hac habitasse platea dictumst. Fusce elementum, dolor id ullamcorper aliquam, odio enim accumsan velit, ac rhoncus odio sem nec tellus. Ut ac euismod lorem, id aliquam velit. Nam a nisi id turpis pharetra pharetra.
+
+Phasellus sollicitudin sit amet leo a rhoncus. Nullam eget leo tristique, blandit ex ut, dignissim libero. Ut faucibus metus eget nibh tempus, sit amet rhoncus mauris dapibus. Nulla hendrerit elit massa, et placerat justo ultricies quis. Cras quis enim purus. Vestibulum tristique risus non mi tincidunt semper. Phasellus aliquet enim sit amet massa auctor, nec tristique lacus ultrices. Maecenas consequat eget turpis at dictum. Praesent sit amet nulla sapien. Ut quam purus, condimentum ac ultricies sit amet, scelerisque in felis. In hac habitasse platea dictumst. Nullam viverra metus in ante lobortis auctor. Donec ullamcorper viverra rhoncus. Vestibulum venenatis, leo et tempor ultrices, mi libero imperdiet velit, sit amet sagittis nibh neque sed massa.
+
+Nunc non porttitor lectus. Proin vel ipsum ac odio vulputate porttitor. Pellentesque id orci nibh. Vestibulum in ullamcorper nulla, ut accumsan felis. Duis fringilla lorem a lobortis pulvinar. Curabitur odio massa, porttitor a urna sit amet, dignissim sollicitudin nibh. Ut elit eros, euismod id erat quis, viverra commodo tortor. Donec sed tortor vitae nisl accumsan dictum eu ut lectus. Cras commodo pulvinar nulla, in aliquam enim viverra eget. Etiam tristique hendrerit mi, sit amet pretium arcu tempor consectetur. Curabitur vel tellus metus. Maecenas iaculis turpis dui, eget tristique nulla lacinia id. In ultrices enim sit amet ipsum maximus finibus. Nulla malesuada laoreet lorem, at vehicula sem semper eu. Suspendisse dignissim pulvinar vehicula. </p></div>
 				</div>
 			</div>
 			<script src="https://code.jquery.com/jquery.js"></script>
