--- a/4096.html
+++ b/4096.html
@@ -3,7 +3,16 @@
     <title>4096</title>
     <link rel="shortcut icon" type="image/x-icon" href="titleicon.ico" />
   	<link rel="stylesheet" href="styles/main.css">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+      ga('create', 'UA-62273125-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 
 
   	<!-- Latest compiled and minified CSS -->
@@ -34,7 +43,7 @@
             <li><a href="https://www.github.com/Helithumper" target="_blank">GitHub</a></li>
             <li><a href="favoritevideos.html">Favorite Videos</a></li>
             <li class="active"><a href="#">4096</a></li>
-            <li><a href="mailto:peyton.duncan@thewalkerschool.org?Subject=I%20Saw%20Your%20Website!" target="_top">Contact Me!</a></li>
+            <li><a href="mailto:peyton.duncan@thewalkerschool.org?Subject=I%20Saw%20Your%20Website!" target="_top">Contact Me! <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></a></li>
 
 
           </div><!-- /.navbar-collapse -->
@@ -42,14 +51,26 @@
       </nav>
 
       <!--END OF NAVBAR-->
-      <container>
-        <div class="container">
-          <div class="row">
-            <!--insert greenfoot code here-->
-          </div>
+      <div class="container">
+            <div class="row">
 
-        </div>
-      </container>
+              <div class="alert alert-info xs-offset2 xs-span6 center" role="alert">Coming Soon!</div>
+              <div class="progress">
+    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
+      <span class="sr-only">99% Complete</span>
+    </div>
+  </div>
+            </div>
+            <!--<applet code="greenfoot.export.GreenfootScenarioViewer.class"
+                width=570
+                height=791
+                archive="4096.jar"
+                alt="Your browser understands the &lt;APPLET&gt; tag but isn't running the applet, for some reason."
+
+                Your browser is ignoring the &lt;APPLET&gt; tag!
+            </applet>-->
+
+      </div>
 
       <script src="https://code.jquery.com/jquery.js"></script>
 			<!-- Latest compiled and minified JavaScript -->
