--- a/favoritevideos.html
+++ b/favoritevideos.html
@@ -2,7 +2,16 @@
 <head>
   <title>Favorite Videos</title>
   <link rel="shortcut icon" type="image/x-icon" href="titleicon.ico" />
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-62273125-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
   <link rel="stylesheet" href="styles/main2.css">
   <!-- Latest compiled and minified CSS -->
@@ -32,7 +41,7 @@
 					<li><a href="https://www.github.com/Helithumper" target="_blank">GitHub</a></li>
           <li class="active"><a href="favoritevideos.html">Favorite Videos</a></li>
           <li><a href="4096.html">4096</a></li>
-          <li><a href="mailto:peyton.duncan@thewalkerschool.org?Subject=I%20Saw%20Your%20Website!" target="_top">Contact Me!</a></li>
+          <li><a href="mailto:peyton.duncan@thewalkerschool.org?Subject=I%20Saw%20Your%20Website!" target="_top">Contact Me! <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></a></li>
 
 
 
@@ -42,7 +51,10 @@
     <container>
       <div class="container">
         <div class="row">
-              <iframe class="xs-offset2 xs-span6" width="1280" height="720" src="https://www.youtube.com/embed/videoseries?list=FLALpDL0ef1KxVrQJRm91IXg" frameborder="0" allowfullscreen></iframe>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=FLALpDL0ef1KxVrQJRm91IXg" frameborder="0" allowfullscreen></iframe>
+
+          </div>
 
         </div>
       </row>
