--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 	<title>Peyton Duncan</title>
 	<link rel="shortcut icon" type="image/x-icon" href="titleicon.ico" />
 	<link rel="stylesheet" href="styles/main.css">
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+	  ga('create', 'UA-62273125-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
 
 
 	<!-- Latest compiled and minified CSS -->
@@ -36,7 +45,7 @@
 					<li><a href="https://www.github.com/Helithumper" target="_blank">GitHub</a></li>
           <li><a href="favoritevideos.html">Favorite Videos</a></li>
 					<li><a href="4096.html">4096</a></li>
-					<li><a href="mailto:peyton.duncan@thewalkerschool.org?Subject=I%20Saw%20Your%20Website!" target="_top">Contact Me!</a></li>
+					<li><a href="mailto:peyton.duncan@thewalkerschool.org?Subject=I%20Saw%20Your%20Website!" target="_top">Contact Me! <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></a></li>
 
 
 				</div><!-- /.navbar-collapse -->
