--- a/favoritevideos.html
+++ b/favoritevideos.html
@@ -2,16 +2,6 @@
 <head>
   <title>Favorite Videos</title>
   <link rel="shortcut icon" type="image/x-icon" href="titleicon.ico" />
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-62273125-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 
   <link rel="stylesheet" href="styles/main2.css">
   <!-- Latest compiled and minified CSS -->
@@ -22,55 +12,65 @@
 </head>
 <body>
   <nav class="navbar navbar">
-		<div class="container-fluid">
-			<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-			</div>
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
 
 
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					<li><a href="index.html"><strong>Home</strong><span class="sr-only">(current)</span></a></li>
-					<!-- <li><a href="github.html">GitHub</a></li> -->
-					<li><a href="https://www.github.com/Helithumper" target="_blank">GitHub</a></li>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="index.html"><strong>Home</strong><span class="sr-only">(current)</span></a></li>
+          <!-- <li><a href="github.html">GitHub</a></li> -->
+          <li><a href="https://www.github.com/Helithumper" target="_blank">GitHub</a></li>
           <li class="active"><a href="favoritevideos.html">Favorite Videos</a></li>
           <li><a href="4096.html">4096</a></li>
           <li><a href="mailto:peyton.duncan@thewalkerschool.org?Subject=I%20Saw%20Your%20Website!" target="_top">Contact Me! <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></a></li>
 
 
 
-				</div><!-- /.navbar-collapse -->
-			</div><!-- /.container-fluid -->
-		</nav>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
     <container>
       <div class="container">
+
         <div class="row">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=FLALpDL0ef1KxVrQJRm91IXg" frameborder="0" allowfullscreen></iframe>
 
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Favorite Videos Playlist</h3>
+              </div>
+              <div class="panel-body">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=FLALpDL0ef1KxVrQJRm91IXg" frameborder="0" allowfullscreen></iframe>            </div>
+                </div>
+              </div>
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h3 class="panel-title">Favorite Study Music Playlist</h3>
+                </div>
+                <div class="panel-body">
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=PLx65qkgCWNJIs3FPaj8JZhduXSpQ_ZfvL" frameborder="0" allowfullscreen></iframe>
+                  </div>
+                </div>
+              </div>
+
+            </div>
           </div>
+        </container>
 
-        </div>
-      </row>
-    </container>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-62273125-1', 'auto');
-    ga('send', 'pageview');
-    </script>
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+        <script src="https://code.jquery.com/jquery.js"></script>
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-  </body>
-  </html>
+      </body>
+      </html>
