--- a/favoritevideos.html
+++ b/favoritevideos.html
@@ -64,6 +64,16 @@
                 </div>
               </div>
 
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h3 class="panel-title">Favorite Organ Music Playlist</h3>
+                </div>
+                <div class="panel-body">
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe width="1280" height="720" src="https://www.youtube.com/embed/videoseries?list=PLTfX3iBu1_QszgOIrmpACac3pPb6n3fV4" frameborder="0" allowfullscreen></iframe>                  </div>
+                </div>
+              </div>
+
             </div>
           </div>
         </container>
