Added Steam Link

--- a/favoritevideos.html
+++ b/favoritevideos.html
@@ -32,6 +32,7 @@
           <li><a href="https://www.github.com/Helithumper" target="_blank">GitHub</a></li>
           <li class="active"><a href="favoritevideos.html">Favorite Videos</a></li>
           <li><a href="4096.html">4096</a></li>
+          <li><a href="http://steamcommunity.com/id/Helithumper" target="_blank">Steam Account</a></li>
           <li><a href="mailto:peyton.duncan@thewalkerschool.org?Subject=I%20Saw%20Your%20Website!" target="_top">Contact Me! <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></a></li>
 
 
