--- a/widgets.html
+++ b/widgets.html
@@ -71,6 +71,15 @@
 
             </div>
           </div>
+          <div class="panel panel-default center-block">
+            <div class="panel-heading">
+              <h3 class="panel-title">Steam Profiles</h3>
+            </div>
+            <div class="panel-body">
+
+<iframe src="http://challonge.com/helithumper/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+            </div>
+          </div>
         </div>
       </div>
 
