--- a/widgets.html
+++ b/widgets.html
@@ -73,7 +73,7 @@
           </div>
           <div class="panel panel-default center-block">
             <div class="panel-heading">
-              <h3 class="panel-title">Steam Profiles</h3>
+              <h3 class="panel-title">Tournament Bracket Test v01</h3>
             </div>
             <div class="panel-body">
 
