--- a/widgets.html
+++ b/widgets.html
@@ -77,7 +77,8 @@
             </div>
             <div class="panel-body">
 
-<iframe src="http://challonge.com/helithumper/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+              <iframe src="http://challonge.com/Helithumper2/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
+              <iframe src="http://challonge.com/Helithumper3/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
             </div>
           </div>
         </div>
