Added physics graph

--- a/widgets.html
+++ b/widgets.html
@@ -73,13 +73,11 @@
           </div>
           <div class="panel panel-default center-block">
             <div class="panel-heading">
-              <h3 class="panel-title">Clayton's Birthday and Fourth of July Competition</h3>
+              <h3 class="panel-title">Physics Position Graph Generator</h3>
             </div>
             <div class="panel-body">
-
-              <iframe src="http://challonge.com/Helithumper2/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
-              <iframe src="http://challonge.com/Helithumper3/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
-            </div>
+<script type="text/javascript" id="WolframAlphaScript891c97c0ef7bb88206fdd3b81b6d990f" src="//www.wolframalpha.com/widget/widget.jsp?id=891c97c0ef7bb88206fdd3b81b6d990f&theme=blue&output=lightbox"></script>
+              </div>
           </div>
         </div>
       </div>
