Added Music Page with Plugins for Soundcloud

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					<!-- <li><a href="github.html">GitHub</a></li> -->
 					<li><a href="https://www.github.com/Helithumper" target="_blank">GitHub</a></li>
           <li><a href="favoritevideos.html">Favorite Videos</a></li>
+					<li><a href="music.html">Music</a></li>
 					<li><a href="4096.html">4096</a></li>
 					<li><a href="widgets.html">Widgets</a></li>
 					<li><a href="http://steamcommunity.com/id/Helithumper" target="_blank">Steam Account</a></li>
