--- a/howto.html
+++ b/howto.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>How To Play</title>
+  <script src="processing-1.0.0.min.js"></script>
 </head>
 <body>
   <p><span style="font-family:lucida sans unicode,lucida grande,sans-serif;"><span style="font-size:28px;"><span lucida="" sans=""><strong>Instructions:</strong></span></span></span></p>
@@ -32,6 +33,6 @@
 <li><span style="font-family:lucida sans unicode,lucida grande,sans-serif;"><span style="font-size:28px;"><span lucida="" sans="">If you are playing in multiplayer, your scores will be shown after every round!</span></span></span></li>
 </ol>
 
-
+    <canvas data-processing-sources="hello-web.pde"></canvas>
 </body>
 </html>
