--- a/music.html
+++ b/music.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Favorite Videos</title>
+  <title>Music</title>
   <link rel="shortcut icon" type="image/x-icon" href="titleicon.ico" />
 
   <link rel="stylesheet" href="styles/main2.css">
@@ -30,8 +30,8 @@
           <li><a href="index.html"><strong>Home</strong><span class="sr-only">(current)</span></a></li>
           <!-- <li><a href="github.html">GitHub</a></li> -->
           <li><a href="https://www.github.com/Helithumper" target="_blank">GitHub</a></li>
-          <li class="active"><a href="favoritevideos.html">Favorite Videos</a></li>
-          <li><a href="music.html">Music</a></li>
+          <li><a href="favoritevideos.html">Favorite Videos</a></li>
+          <li class = "active"><a href="#">Music</a></li><li>
           <li><a href="4096.html">4096</a></li>
 					<li><a href="widgets.html">Widgets</a></li>
           <li><a href="http://steamcommunity.com/id/Helithumper" target="_blank">Steam Account</a></li>
@@ -49,34 +49,26 @@
 
             <div class="panel panel-default">
               <div class="panel-heading">
-                <h3 class="panel-title">Favorite Videos Playlist</h3>
+                <h3 class="panel-title">SoundCloud</h3>
               </div>
               <div class="panel-body">
-                <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=FLALpDL0ef1KxVrQJRm91IXg" frameborder="0" allowfullscreen></iframe>            </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h3 class="panel-title">Touhou</h3>
+                  </div>
+                  <div class="panel-body">
+                    <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/146563436&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+                  </div>
                 </div>
-              </div>
-              <div class="panel panel-default">
-                <div class="panel-heading">
-                  <h3 class="panel-title">Favorite Study Music Playlist</h3>
-                </div>
-                <div class="panel-body">
-                  <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=PLx65qkgCWNJIs3FPaj8JZhduXSpQ_ZfvL" frameborder="0" allowfullscreen></iframe>
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h3 class="panel-title">Nightcore</h3>
+                  </div>
+                  <div class="panel-body">
+                    <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/158847551%3Fsecret_token%3Ds-d0jYA&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
                   </div>
                 </div>
               </div>
-
-              <div class="panel panel-default">
-                <div class="panel-heading">
-                  <h3 class="panel-title">Favorite Organ Music Playlist</h3>
-                </div>
-                <div class="panel-body">
-                  <div class="embed-responsive embed-responsive-16by9">
-                    <iframe width="1280" height="720" src="https://www.youtube.com/embed/videoseries?list=PLTfX3iBu1_QszgOIrmpACac3pPb6n3fV4" frameborder="0" allowfullscreen></iframe>                  </div>
-                </div>
-              </div>
-
             </div>
           </div>
         </container>
