Adding Links, Fixing CSS
-Added Pandora / Code Studio
-Added small padding to bottom of boxes to space stuff out.
-Added Productivity Tab, sorted out links
-Fixed code indentation problems
-Changed Fonts
-Swapped position of Productivity and School Columns
-Changed Date to words
-Changed Time to exclude Seconds

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 
   <link rel="stylesheet" href="res/css/styles.css" type="text/css" />
   <link rel="shortcut icon" href="res/img/favicon.ico" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel='stylesheet' type='text/css' />
   <link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Raleway|Share+Tech+Mono" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   <script src="res/js/prefixfree.min.js"></script>
   <script src="res/js/jquery.keyframes.min.js"></script>
@@ -34,70 +33,89 @@
       <span id="clock"></span>
     </div>
     <div class="flex-container">
+      <div class="link-box" id="box-6">
+          <div class="headline">
+            <h2>PRODUCTIVITY</h2>
+          </div>
+            <ul>
+              <li><a href="http://gmail.com">Google Mail</a></li>
+              <li><a href="http://calendar.google.com">Google Calendar</a></li>
+              <li><a href="https://drive.google.com">Google Drive</a></li>
+              <li><a href="https://maps.google.com/">Google Maps</a></li>
+              <li><a href="http://keep.google.com">Google Keep</a></li>
+              <li><a href="https://www.evernote.com/">Evernote</a></li>
+            </ul>
+      </div>
+
+
       <div class="link-box" id="box-1">
         <div class="headline">
-          <h2>SCHOOL</h2></div>
+          <h2>SCHOOL</h2>
+        </div>
           <ul>
-            <li><a href="http://gmail.com">Gmail</a></li>
-            <li><a href="http://calendar.google.com">Calendar</a></li>
-            <li><a href="https://drive.google.com">Google Drive</a></li>
-            <li><a href="https://maps.google.com/">Google Maps</a></li>
-            <li><a href="http://keep.google.com">Google Keep</a></li>
             <li><a href="https://thewalkerschool.org/">Walker Homepage</a></li>
             <li><a href="http://www.thewalkerschool.org/faculty_staff/teacherpages/index.aspx?">Walker Teacher Pages</a></li>
             <li><a href="http://grammarly.com">Grammarly</a></li>
             <li><a href="https://www.jstor.org">JStor</a></li>
+            <li><a href="https://studio.code.org/">Code Studio</a></li>
           </ul>
         </div>
 
-        <div class="link-box" id="box-2">
+      
+
+      <div class="link-box" id="box-2">
+        <div class="headline">
+          <h2>CODE</h2>
+        </div>
+          <ul>
+            <li><a href="http://github.com">Github</a></li>
+            <li><a href="https://docs.oracle.com/javase/8/docs/api/">Java API</a></li>
+            <li><a href="http://www.w3schools.com/">W-3 Schools</a></li>
+            <li><a href="https://pastebin.com">Pastebin</a></li>
+            <li><a href="https://stackoverflow.com">Stack Overflow</a></li>
+          </ul>
+        </div>
+
+        <div class="link-box" id="box-3">
           <div class="headline">
-            <h2>CODE</h2></div>
+            <h2>NEWS</h2>
+          </div>
             <ul>
-              <li><a href="http://github.com">Github</a></li>
-              <li><a href="https://docs.oracle.com/javase/8/docs/api/">Java API</a></li>
-              <li><a href="http://www.w3schools.com/">W-3 Schools</a></li>
-              <li><a href="https://pastebin.com">Pastebin</a></li>
-              <li><a href="https://stackoverflow.com">Stack Overflow</a></li>
+            <li><a href="https://krebsonsecurity.com">Krebs On Security</a></li>
+            <li><a href="https://Gizmodo.com">Gizmodo</a></li>
+            <li><a href="https://Kotaku.com">Kotaku</a></li>
+            <li><a href="https://Lifehacker.com">Lifehacker</a></li>
             </ul>
           </div>
 
-          <div class="link-box" id="box-3">
+          <div class="link-box" id="box-4">
             <div class="headline">
-              <h2>NEWS</h2></div>
+              <h2>MEDIA</h2>
+            </div>
               <ul>
-              <li><a href="https://krebsonsecurity.com">Krebs On Security</a></li>
-              <li><a href="https://Gizmodo.com">Gizmodo</a></li>
-              <li><a href="https://Kotaku.com">Kotaku</a></li>
-              <li><a href="https://Lifehacker.com">Lifehacker</a></li>
+                <li><a href="https://youtube.com">Youtube</a></li>
+                <li><a href="https://www.youtube.com/playlist?list=PLx65qkgCWNJIs3FPaj8JZhduXSpQ_ZfvL">Youtube - Study</a></li>
+                <li><a href="http://twitch.tv">Twitch</a></li>
+                <li><a href="http://netflix.com">Netflix</a></li>
+                <li><a href="http://plex.tv">Plex</a></li>
+                <li><a href="http://www.pandora.com">Pandora</a></li>
+                <li><a href="https://play.spotify.com/">Spotify Web Player</a></li>
               </ul>
             </div>
 
-            <div class="link-box" id="box-4">
-              <div class="headline">
-                <h2>VIDEO</h2></div>
-                <ul>
-                  <li><a href="https://youtube.com">Youtube</a></li>
-                  <li><a href="https://www.youtube.com/playlist?list=PLx65qkgCWNJIs3FPaj8JZhduXSpQ_ZfvL">Youtube - Study</a></li>
-                  <li><a href="http://twitch.tv">Twitch</a></li>
-                  <li><a href="http://netflix.com">Netflix</a></li>
-                  <li><a href="http://plex.tv">Plex</a></li>
-                </ul>
-              </div>
 
-
-            <div class="link-box" id="box-5">
-              <div class="headline">
-                <h2>ETC</h2></div>
-                <ul>
-                  <li><a href="https://reddit.com">Reddit</a></li>
-                  <li><a href="https://play.spotify.com/">Spotify Web Player</a></li>
-                  <li><a href="http://web.whatsapp.com">Whatsapp Web</a></li>
-                  <li><a href="http://amazon.com">Amazon</a></li>
-                </ul>
-              </div>
-
+          <div class="link-box" id="box-5">
+            <div class="headline">
+              <h2>ETC</h2>
             </div>
+              <ul>
+                <li><a href="https://reddit.com">Reddit</a></li>
+                <li><a href="http://web.whatsapp.com">Whatsapp Web</a></li>
+                <li><a href="http://amazon.com">Amazon</a></li>
+              </ul>
+            </div>
+
+          </div>
             <!-- <div class = "photoframe">
             <img src="res/img/AddamsBoard.jpg" alt="" class = "bottomPicture">
             <img src="res/img/AddamsStage.jpg" alt="" class = "bottomPicture">
