--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <form action="https://www.google.com/search" method="get"><input id="input-search" type="text" autocomplete="off" name="q" placeholder="Google-Search" autofocus></form>
     <div class="search-suggestions"></div>
 
-  </header>
+  </header>                                                                                                                                                                                                                                                                      
 
   <main>
     <div class="clock">
@@ -112,6 +112,7 @@
                 <li><a href="https://reddit.com">Reddit</a></li>
                 <li><a href="http://web.whatsapp.com">Whatsapp Web</a></li>
                 <li><a href="http://amazon.com">Amazon</a></li>
+                <li><a href="https://online-go.com/">Online-Go</a></li>
               </ul>
             </div>
 
