UCF Edits and fixed date

--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
     <form action="https://www.google.com/search" method="get"><input id="input-search" type="text" autocomplete="off" name="q" placeholder="Google-Search" autofocus></form>
     <div class="search-suggestions"></div>
 
-  </header>                                                                                                                                                                                                                                                                      
+  </header>
 
   <main>
     <div class="clock">
-    <br>
+      <br>
       <span id="date"></span>
       <br>
       <span id="clock"></span>
     </div>
+
     <div class="flex-container">
       <div class="link-box" id="box-6">
           <div class="headline">
@@ -50,18 +51,18 @@
 
       <div class="link-box" id="box-1">
         <div class="headline">
-          <h2>SCHOOL</h2>
+          <h2 id="UCF">UCF</h2>
         </div>
           <ul>
-            <li><a href="https://thewalkerschool.org/">Walker Homepage</a></li>
-            <li><a href="http://www.thewalkerschool.org/faculty_staff/teacherpages/index.aspx?">Walker Teacher Pages</a></li>
+            <li><a href="https://www.ucf.edu/">UCF Homepage</a></li>
+            <li><a href="https://my.ucf.edu/psp/IHPROD/GUEST/EMPL/h/?tab=PAPP_GUEST">My UCF</a></li>
+            <li><a href="https://outlook.office.com/owa/?realm=knights.ucf.edu">UCF Outlook</a></li>
             <li><a href="http://grammarly.com">Grammarly</a></li>
             <li><a href="https://www.jstor.org">JStor</a></li>
-            <li><a href="https://studio.code.org/">Code Studio</a></li>
           </ul>
         </div>
 
-      
+
 
       <div class="link-box" id="box-2">
         <div class="headline">
@@ -94,12 +95,9 @@
             </div>
               <ul>
                 <li><a href="https://youtube.com">Youtube</a></li>
-                <li><a href="https://www.youtube.com/playlist?list=PLx65qkgCWNJIs3FPaj8JZhduXSpQ_ZfvL">Youtube - Study</a></li>
                 <li><a href="http://twitch.tv">Twitch</a></li>
                 <li><a href="http://netflix.com">Netflix</a></li>
                 <li><a href="http://plex.tv">Plex</a></li>
-                <li><a href="http://www.pandora.com">Pandora</a></li>
-                <li><a href="https://play.spotify.com/">Spotify Web Player</a></li>
               </ul>
             </div>
 
