Fixed Links / Added Links

--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
               <li><a href="http://calendar.google.com">Google Calendar</a></li>
               <li><a href="https://drive.google.com">Google Drive</a></li>
               <li><a href="https://maps.google.com/">Google Maps</a></li>
-              <li><a href="http://keep.google.com">Google Keep</a></li>
-              <li><a href="https://www.evernote.com/">Evernote</a></li>
             </ul>
       </div>
 
@@ -54,9 +52,10 @@
           <h2 id="UCF">UCF</h2>
         </div>
           <ul>
-            <li><a href="https://www.ucf.edu/">UCF Homepage</a></li>
             <li><a href="https://my.ucf.edu/psp/IHPROD/GUEST/EMPL/h/?tab=PAPP_GUEST">My UCF</a></li>
+            <li><a href="https://www.ucf.edu/">UCF Homepage</a></li>
             <li><a href="https://outlook.office.com/owa/?realm=knights.ucf.edu">UCF Outlook</a></li>
+            <li><a href="https://webcourses.ucf.edu/">UCF Webcourses</a></li>
             <li><a href="http://grammarly.com">Grammarly</a></li>
             <li><a href="https://www.jstor.org">JStor</a></li>
           </ul>
@@ -98,6 +97,7 @@
                 <li><a href="http://twitch.tv">Twitch</a></li>
                 <li><a href="http://netflix.com">Netflix</a></li>
                 <li><a href="http://plex.tv">Plex</a></li>
+                <li><a href="https://pandora.com">Pandora</a></li>
               </ul>
             </div>
 
@@ -110,6 +110,7 @@
                 <li><a href="https://reddit.com">Reddit</a></li>
                 <li><a href="http://web.whatsapp.com">Whatsapp Web</a></li>
                 <li><a href="http://amazon.com">Amazon</a></li>
+                <li><a href="https://messenger.com">Facebook Messenger</a></li>
                 <li><a href="https://online-go.com/">Online-Go</a></li>
               </ul>
             </div>
